Fix styling so that povery labels fit on small profile with presentation mode. Closes #843: 11.3% hides behind the chart on taping “Present”

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -20,8 +20,8 @@ $vzb-font-size-tiny: .625em;
 $vzb-font-size-small: .8em;  
 $vzb-font-size-medium: 1.24em; 
 $vzb-font-size-large: 1.38em;  
-$vzb-font-size-larger: 1.563em; 
-$vzb-font-size-largest: 2em;     
+$vzb-font-size-larger: 1.6em; 
+$vzb-font-size-largest: 2.1em;     
 
 // ----------------------------------------------------------------------------
 //   Colors
