--- a/src/tools/mountainchart/_mountainchart.scss
+++ b/src/tools/mountainchart/_mountainchart.scss
@@ -240,10 +240,21 @@
       }
     }
 
+    &.vzb-medium {
+      .vzb-mc-probe text {
+        font-size: $vzb-font-size-medium;
+      }
+    }
     &.vzb-small {
       .vzb-mc-axis-x-title,
       .vzb-mc-axis-y-title {
         font-size: $vzb-font-size-medium;
+      }
+      .vzb-mc-probe text {
+        font-size: $vzb-font-size-medium;
+        &.vzb-mc-probe-extremepoverty {
+          letter-spacing: .08em;
+        }
       }
     }
   }
